--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fcc-learn-npm-package-json",
   "author": "teja-sri-pacharu",
+  "description": "a project that is created for my backend certification in free code camp",
   "dependencies": {
     "express": "^4.14.0"
   },
